[project]
name = "python-hmrc-search"
version = "0.1.0"
description = "The HMRC search api"
authors = [
    {name = "nikilok",email = "nikilok@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
package-mode = false
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pandas",
    "fuzzywuzzy",
    "python-Levenshtein",
    "fastapi-mcp (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"

